# polaroid

./: .aider.conf.yml  .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  action.yml  ai-catalog.json  mkdocs.yml  openapi.yaml  pyproject.toml  smithery.yaml  smoke_test.py
.claude/commands/: domain.md
.continue/: config.json
.cursor/rules/: project.mdc
.github/: copilot-instructions.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  stale.yml
assets/: demo.tape
docs/: api-reference.md  architecture.md  cli-reference.md  contributing.md  github-action.md  index.md  mcp.md  openai.md  quickstart.md
docs/case-studies/: game-ai-world-persistence.md  robotics-warehouse-mapping.md
examples/: demo.py  embodied_agent_stack.py  game_world_agent.py  multi_agent_mapping.py  robot_exploration.py
src/polaroid/: __init__.py  api.py  cli.py  export.py  graph.py  mcp_server.py  merger.py  query.py  report.py  stats.py  store.py  subgraph.py
src/scenemem/: __init__.py  api.py  cli.py  graph.py  mcp_server.py  merger.py  query.py  report.py  store.py
submissions/02_aaif_registry/: server.json
tests/: conftest.py  test_api.py  test_cli_runner.py  test_export.py  test_graph.py  test_merger.py  test_query.py  test_report.py  test_stats.py  test_store.py  test_subgraph.py
tools/: openai-tools.json
